--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1",
+    "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
+    "swr": "^2.3.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
