--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "nuwave/lighthouse": "^6.64",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
@@ -17,6 +18,7 @@
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
+        "mll-lab/laravel-graphql-playground": "^1.1",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
